# Laforge

./: .gitignore  DOCUMENTATION-Forge.md  TODO.md  icon-menu.ai  index.html  package-lock.json  package.json
.github/workflows/: release.yml
Forge/: ContentView.swift  ForgeApp.swift  Item.swift
Forge.xcodeproj/: project.pbxproj
ForgeTests/: ForgeTests.swift
ForgeUITests/: ForgeUITests.swift  ForgeUITestsLaunchTests.swift
docs/: TECHNICAL_NOTES.md  TODO.md  fusion.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: delta_sync.rs  full_site_scraper.rs  main.rs  parallel_sync.rs  scheduler.rs  scrape_cache.rs  scraper.rs  transfer_resume.rs  tray.rs  version_history.rs  watcher.rs
src/components/: AboutModal.tsx  CreateProject.tsx  DeltaSyncStats.css  DeltaSyncStats.tsx  FTPLogWindow.css  FTPLogWindow.tsx  FilterBar.css  FilterBar.tsx  FullSiteScraper.css  FullSiteScraper.tsx  Header.tsx  MiniSidebar.tsx  Notifications.tsx  PostSyncHooks.css  PostSyncHooks.tsx  PreviewLinkGenerator.css  PreviewLinkGenerator.tsx  ProjectCard.tsx  ProjectDashboard.css  ProjectDashboard.tsx  ProjectDetail.tsx  ProjectForm.tsx  ProjectList.tsx  ProjectListRow.tsx  ReorganizeProjectModal.tsx  ScrapingPage.css  ScrapingPage.tsx  Settings.tsx  SettingsPage.css  SettingsPage.tsx  Sidebar.tsx  SmartPaste.tsx  SyncRulesPanel.css  SyncRulesPanel.tsx  SyncScheduler.css  SyncScheduler.tsx  SyncStatusBadge.tsx  TimeTracker.css  TimeTracker.tsx  VersionHistory.css  (+1 more)
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ContextMenu.tsx  ExternalLink.tsx  Input.tsx  Modal.tsx  Switch.tsx  Tabs.tsx  TreeView.tsx  TreeViewUtils.ts  index.ts
src/features/projects/components/: FTPConnectionCard.tsx  FTPSection.tsx  FTPSmartPaste.tsx  FTPSyncCard.tsx  GeneralSection.tsx  ProjectDetailHeader.tsx  ProjectFileTree.tsx  ScrubbingSection.tsx  SyncProgress.css  SyncProgress.tsx  index.ts
src/features/projects/hooks/: index.ts  useFTPConnection.ts  useFileTree.ts  useFileTreeContextMenu.ts  useFileTreeDragAndDrop.ts  useFileTreeModals.ts
src/features/projects/utils/: ftpCredentialsParser.ts
src/features/scraping/components/: ScrapingPanel.css  ScrapingPanel.tsx  ScrapingProgress.css  ScrapingProgress.tsx  index.ts
src/features/settings/components/: AutoOrganizeSection.tsx  BackupSection.tsx  BillingSection.tsx  FolderStructureSection.tsx  GeminiSection.tsx  MacOSSettingsSection.tsx  WorkspaceSection.tsx  index.ts
src/hooks/: index.ts  useAsync.ts  useClientProfile.ts  useColorMerge.ts  useFileWatcher.ts  useFilterPreferences.ts  useMenuEvents.ts  useNotification.ts  useProjectFiltering.ts  useProjectForm.ts  useProjects.ts  useRetryCountdown.ts  useScraping.ts  useSettings.ts  useSyncEvents.ts  useSystemTray.ts
src/lib/: index.ts  logger.ts
src/lib/errors/: index.ts
src/lib/tauri/: tauriClient.ts
src/services/: backupService.ts  briefGenerator.ts  configStore.ts  deltaService.ts  documentationService.ts  fileSystemService.ts  fileWatcherService.ts  fullSiteScraperService.ts  geminiService.ts  previewService.ts  projectReorganizeService.ts  projectService.ts  scrapeCacheService.ts  scrapingExportService.ts  scrapingService.ts  settingsService.ts  sftpService.ts  storageService.ts  syncService.ts  templateService.ts  transferResumeService.ts
src/services/documentation/: fileOrganizer.ts  index.ts  markdownGenerator.ts  webScraper.ts
src/services/gemini/: contentAnalyzer.ts  ftpCredentialParser.ts  geminiApiClient.ts  index.ts  textProcessor.ts
src/stores/: hooksStore.ts  index.ts  projectStore.ts  scheduleStore.ts  scrapingStore.ts  settingsStore.ts  syncStore.ts  timeStore.ts  uiStore.ts  versionStore.ts
src/styles/: globals.css
src/types/: index.ts
(+6 files in other folders)
