[package]
name = "forge"
version = "1.0.0"
description = "Application de gestion de projets web"
authors = ["Forge"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "shell-open", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# FTP/FTPS support
suppaftp = { version = "6.0", features = ["native-tls"] }
# SFTP support
ssh2 = "0.9"
# Keychain/Keyring support
keyring = "3"
# Async runtime (needed by some deps)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# TLS
native-tls = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
