[package]
name = "forge"
version = "1.0.0"
description = "Application de gestion de projets web"
authors = ["Forge"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "os-all", "shell-open", "dialog-all", "fs-all", "path-all", "system-tray", "icon-png"] }
# Tauri plugin for persistent key-value storage
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# For user directories
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# FTP/FTPS support
suppaftp = { version = "6.0", features = ["native-tls"] }
# SFTP support
ssh2 = "0.9"
# Keychain/Keyring support
keyring = "3"
# Async runtime (needed by some deps)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# TLS
native-tls = "0.2"
# Directory walking
walkdir = "2.4"
# HTTP client for web scraping
reqwest = { version = "0.12", features = ["blocking"] }
# URL parsing
url = "2.5"
# File system watcher
notify = "6.1"
# Date/time formatting
chrono = "0.4"
# Lazy static initialization
once_cell = "1.19"
# HTML parsing for scraping
scraper = "0.21"
# CSS selector parsing
select = "0.6"
# Parallel processing
rayon = "1.10"
# File hashing for delta sync and version history
sha2 = "0.10"
# Cron scheduling
cron = "0.12"
# UUID generation
uuid = { version = "1.11", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
